--- a/src/pages/security/costumers/register.css
+++ b/src/pages/security/costumers/register.css
@@ -4,8 +4,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    max-width: 100%;
-    max-height: 550px;
+    
+    max-height: 600px;
 } 
 
 .cardContainerRegister {
