--- a/src/pages/security/login.css
+++ b/src/pages/security/login.css
@@ -15,13 +15,14 @@
     position: absolute;
     background-color: aliceblue;
     background-color: #554932a9;
-    max-width: 500px;
+    width: max-content;
     max-height: 500px;    
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
 
 } 
+
 
 .loginContainer {
     height: auto;
